--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Test</title>
-    <script src="../../../dist/main.js"></script>
+    <!-- <script src="../../../dist/main.js"></script> -->
     <!-- <script type="text/javascript" src="/js/nameChecker.js"></script>
     <script type="text/javascript" src="/js/formHandler.js"></script>
     <link rel="stylesheet" href="/styles/resets.css">
