--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -6,12 +6,12 @@
     <title>Test</title>
     <!-- <script src="../../../dist/main.js"></script> -->
     <!-- <script type="text/javascript" src="/js/nameChecker.js"></script>
-    <script type="text/javascript" src="/js/formHandler.js"></script>
+    <script type="text/javascript" src="/js/formHandler.js"></script> -->
     <link rel="stylesheet" href="/styles/resets.css">
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/form.css">
-    <link rel="stylesheet" href="/styles/footer.css"> -->
+    <link rel="stylesheet" href="/styles/footer.css">
 </head>
 
 <body>
